[package]
name = "alchem"
version = "0.1.2"
authors = ["Charlie Ozinga <ozchaz@gmail.com>"]
edition = "2018"

[dependencies]
clap = { version = "2.33", features = ["wrap_help"] }
ctrlc = "3.1"
env_logger = "0.7"
error-chain = "0.12"
futures = "0.3"
lazy_static = "1.4"
log = "0.4"
serde_json = "1.0"

[dependencies.alchem-macros]
version = "0.1"
git = "https://github.com/chaaz/alchem-macros"
branch = "main"
# path = "../alchem-macros"

[dependencies.tokio]
version = "1.0"
features = ["rt-multi-thread", "macros", "time"]

[lib]
name = "alchem"
path = "src/lib.rs"

[[bin]]
name = "alchem"
path = "src/launch.rs"
doc = false

[features]
verbose = []

[profile.release]
# for profiling with instruments/perf
debug = true
